--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -7,17 +7,24 @@ body {
 }
 
 .nav {
-    background-color: #333;
+    background-color: #2E6171;
     color: white; 
     display: flex;
     justify-content: space-between;
     align-items: stretch;
     gap: 2rem;
     padding: 0 1rem;
+    height: 150px;
 }
 
 .site-title {
-    font-size: 2rem;
+    font-size: 40px;
+}
+
+.logo {
+    width: 400px;
+    height: 160px;
+    margin-right: 8px;
 }
 
 .nav ul {
@@ -26,6 +33,8 @@ body {
     display: flex; 
     gap: 1rem; 
     list-style: none;
+    padding-top: 55px;
+    font-size: 30px;
 }
 
 .nav a {
@@ -39,8 +48,11 @@ body {
 
 .nav li.active {
     background-color: #555;
+    border-radius: 10px;
 }
 
 .nav li:hover {
-    background-color: #777;
+    background-color: #555;
+    height: 45px;
+    border-radius: 10px;
 }
