--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -56,3 +56,39 @@ body {
     height: 45px;
     border-radius: 10px;
 }
+
+/* footer.css */
+
+.footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+  
+.footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+  
+.social-media-links {
+    margin-top: 20px;
+}
+  
+.social-media-links a {
+    color: #fff;
+    margin-right: 10px;
+    text-decoration: none;
+}
+  
+
+.social-media-links a svg {
+    vertical-align: middle;
+    display: inline-block;
+}
+  
+.social-media-links a:hover {
+    text-decoration: none;
+}
+  
+  
