--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -192,7 +192,7 @@ body {
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
     gap: 2rem;
-    justify-content: center; 
+    justify-content: center 
 }
 
 .project:first-child {
@@ -209,10 +209,14 @@ body {
     width: 100%;
 }
 
+.project:nth-child(5) {
+    background-color: var(--green);
+}
+
 
   
 .project {
-    background-color: #fff;
+    background-color: none;
     border-radius: 50px;
     padding: 1rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -224,7 +228,8 @@ body {
 .project img {
     height: 100%;
     max-width: 100%;
-    border-radius: 8px;
+    border-radius: 50px;
+    background-size: cover;
 }
   
 .project h3 {
