--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -244,7 +244,6 @@ body {
 }
   
 /* contact styling  */
-/* Contact section */
 .contact {
     padding: 2rem 0;
     background-color: #f0f0f0;
@@ -261,7 +260,15 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 2rem;
+    width: 30%;
 }
+
+label {
+    font-family: 'Your Custom Font', sans-serif;
+    font-size: 1.2rem;
+    color: #333;
+}
+  
   
 .contact-form h2 {
     font-size: 2rem;
@@ -290,9 +297,15 @@ textarea {
 textarea {
     resize: vertical;
 }
+
+.btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
   
 button {
-    background-color: #007bff;
+    background-color: var(--green);
     color: #fff;
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
@@ -302,8 +315,14 @@ button {
 }
   
 button:hover {
-    background-color: #0056b3;
+    background-color: green;
 }
+
+/* .error-message {
+    color: gre;
+    margin-top: 0.5rem;
+} */
+  
   
   
 
