--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -232,7 +232,6 @@ body {
     background-color: none;
     border-radius: 50px;
     padding: 1rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 500px;
     height: 500px;
@@ -242,7 +241,19 @@ body {
     height: 100%;
     max-width: 100%;
     border-radius: 50px;
-    background-size: cover;
+    background-size: cover; 
+    border: none;
+    border-style: none;
+}
+
+.project:first-child img {
+    height: 110%;
+    width: 110%;
+}
+
+.project:nth-child(3) img {
+    height: 100%;
+    width: 100%;
 }
   
 .project h3 {
