--- a/src/styles.css
+++ b/src/styles.css
@@ -29,6 +29,108 @@ body {
     height: 150px;
 }
 
+@media only screen and (max-width: 1300px) {
+    .nav {
+        flex-direction: column;
+        display: flex;
+        z-index: 100;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+        width: 100%;
+        padding: 0;
+        position: static;
+    }
+
+    .nav ul {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        list-style: none;
+        padding-top: 55px;
+        font-size: 30px;
+    }
+
+    .site-title {
+        font-size: 40px;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+
+    .about-me {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        text-align: center;
+    }
+
+    .about-title {
+        font-size: 28px;
+    }
+
+    .about-image {
+        max-width: 100%;
+        height: auto;
+        order: 2;
+    }
+
+    .container {
+        grid-template-columns: 1fr; 
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .nav {
+        flex-direction: column;
+        display: flex;
+        z-index: 100;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+        width: 100%;
+        padding: 0;
+        position: static;
+    }
+
+    .nav ul {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        list-style: none;
+        padding-top: 55px;
+        font-size: 30px;
+    }
+
+    .site-title {
+        font-size: 40px;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+
+    .about-me {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        text-align: center;
+    }
+
+    .about-title {
+        font-size: 28px;
+    }
+
+    .about-image {
+        max-width: 100%;
+        height: auto;
+        order: 2;
+    }
+}
+
+
+
 .site-title {
     font-size: 40px;
 }
@@ -69,6 +171,13 @@ body {
     height: 45px;
     border-radius: 10px;
 }
+
+.hamburger-icon {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+}
+
 
 /* footer.css */
 
