--- a/src/styles.css
+++ b/src/styles.css
@@ -29,105 +29,12 @@ body {
     height: 150px;
 }
 
-@media only screen and (max-width: 1300px) {
-    .nav {
-        flex-direction: column;
-        display: flex;
-        z-index: 100;
-        justify-content: center;
-        align-items: center;
-        height: auto;
-        width: 100%;
-        padding: 0;
-        position: static;
-    }
-
-    .nav ul {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        list-style: none;
-        padding-top: 55px;
-        font-size: 30px;
-    }
-
-    .site-title {
-        font-size: 40px;
-        justify-content: center;
-        align-items: center;
-        margin-top: 20px;
-    }
-
-    .about-me {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-        text-align: center;
-    }
-
-    .about-title {
-        font-size: 28px;
-    }
-
-    .about-image {
-        max-width: 100%;
-        height: auto;
-        order: 2;
-    }
-
-    .container {
-        grid-template-columns: 1fr; 
-    }
+.about-title {
+    text-align: center;
 }
 
-@media only screen and (max-width: 900px) {
-    .nav {
-        flex-direction: column;
-        display: flex;
-        z-index: 100;
-        justify-content: center;
-        align-items: center;
-        height: auto;
-        width: 100%;
-        padding: 0;
-        position: static;
-    }
 
-    .nav ul {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        list-style: none;
-        padding-top: 55px;
-        font-size: 30px;
-    }
 
-    .site-title {
-        font-size: 40px;
-        justify-content: center;
-        align-items: center;
-        margin-top: 20px;
-    }
-
-    .about-me {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-        text-align: center;
-    }
-
-    .about-title {
-        font-size: 28px;
-    }
-
-    .about-image {
-        max-width: 100%;
-        height: auto;
-        order: 2;
-    }
-}
 
 
 
@@ -224,7 +131,7 @@ body {
     font-size: 2.5rem;
     margin-bottom: 1rem;
     color: #333;
-    text-align: left;
+    text-align: center;
     width: 100%;
     padding-left: 30px;
 }
@@ -568,6 +475,127 @@ button:hover {
   
   
   
+@media only screen and (max-width: 1000px) {
+    .nav {
+        flex-direction: column;
+        display: flex;
+        z-index: 100;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+        width: 100%;
+        padding: 0;
+        position: static;
+    }
 
-  
-  
+    .nav ul {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        list-style: none;
+        padding-top: 55px;
+        font-size: 30px;
+    }
+
+    .site-title {
+        font-size: 40px;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+    .resume-title,       
+    .contact-title,
+    .about-me,
+    .portfolio-title {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        text-align: center;
+    }
+
+    .about-title {
+        font-size: 28px;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .about-image {
+        max-width: 100%;
+        height: auto;
+        order: 2;
+    }
+
+    .about-me-content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container {
+        grid-template-columns: 1fr; 
+    }
+
+    .projects {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contact-form {
+        width: 50%;
+        align-items: center;
+    }
+
+}
+
+/*
+
+@media only screen and (max-width: 900px) {
+    .nav {
+        flex-direction: column;
+        display: flex;
+        z-index: 100;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+        width: 100%;
+        padding: 0;
+        position: static;
+    }
+
+    .nav ul {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        list-style: none;
+        padding-top: 55px;
+        font-size: 30px;
+    }
+
+    .site-title {
+        font-size: 40px;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+
+    .about-me {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        text-align: center;
+    }
+
+    .about-title {
+        font-size: 28px;
+    }
+
+    .about-image {
+        max-width: 100%;
+        height: auto;
+        order: 2;
+    }
+}
+
+*/
