--- a/src/styles.css
+++ b/src/styles.css
@@ -131,7 +131,7 @@ body {
     font-size: 2.5rem;
     margin-bottom: 1rem;
     color: #333;
-    text-align: center;
+    text-align: left;
     width: 100%;
     padding-left: 30px;
 }
